--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-1/default.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-1/default.yaml
@@ -49,7 +49,7 @@ wso2::apim_traffic_manager:
   password: "%{hiera('wso2::super_admin::password')}"
 
 wso2::environments:
-  apim_gateway_lan:
+  apim_gateway_env1:
     host: am.dev.wso2.org
     port: 9443
     api_endpoint_host: am.dev.wso2.org
