--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-6/common.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-6/common.yaml
@@ -197,7 +197,7 @@ wso2::apply_gateway_specific_configurations: false
 wso2::enable_log_analyzer: false
 
 wso2::environments:
-  apim_gateway_lan:
+  apim_gateway_env1:
     host: mgt-gw.dev.wso2.org
     port: 9443
     api_endpoint_host: gw.dev.wso2.org
