--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-3/api-key-manager.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-3/api-key-manager.yaml
@@ -50,3 +50,15 @@ wso2::remove_file_list:
    -  "repository/deployment/server/webapps/api#am#admin#v0.11.war"
    -  "repository/deployment/server/webapps/api#am#publisher#v0.11.war"
    -  "repository/deployment/server/webapps/api#am#store#v0.11.war"
+
+# File list to be copied to the product folder, if there are changes found in the files, the system
+# service will be restarted
+#wso2::file_list:
+#  - repository/conf/security/cipher-tool.properties
+#  - repository/conf/security/cipher-text.properties
+#  - repository/conf/security/secret-conf.properties
+
+
+# Files to be copied to the product folder when restarting the system service
+#wso2::service_refresh_file_list:
+#  - password-tmp
