--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-5/gw-plus-km.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-5/gw-plus-km.yaml
@@ -79,9 +79,19 @@ wso2::enable_thrift_server: false
 wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: WSClient
 
+# File list to be copied to the product folder, if there are changes found in the files, the system
+# service will be restarted
 #wso2::file_list:
 #   -  "repository/components/dropins/svnkit-all-1.8.7.wso2v1.jar"
 #   -  "repository/components/lib/trilead-ssh2-1.0.0-build215.jar"
+#  - repository/conf/security/cipher-tool.properties
+#  - repository/conf/security/cipher-text.properties
+#  - repository/conf/security/secret-conf.properties
+
+
+# Files to be copied to the product folder when restarting the system service
+#wso2::service_refresh_file_list:
+#  - password-tmp
 
 wso2::remove_file_list:
    -  "repository/deployment/server/jaggeryapps/"
