--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-6/publisher-plus-store.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-6/publisher-plus-store.yaml
@@ -62,3 +62,15 @@ wso2::apply_store_specific_configurations: true
 
 wso2::analytics:
   enabled : true
+
+# File list to be copied to the product folder, if there are changes found in the files, the system
+# service will be restarted
+#wso2::file_list:
+#  - repository/conf/security/cipher-tool.properties
+#  - repository/conf/security/cipher-text.properties
+#  - repository/conf/security/secret-conf.properties
+
+
+# Files to be copied to the product folder when restarting the system service
+#wso2::service_refresh_file_list:
+#  - password-tmp
