--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-3/api-publisher.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-3/api-publisher.yaml
@@ -95,5 +95,5 @@ wso2::enable_jms_connection_details: false
 wso2::apply_publisher_specific_configurations: true
 
 wso2::analytics:
-  enabled : true
+  enabled : false
   skip_event_receiver_connection : true
