--- a/wso2am_analytics/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
+++ b/wso2am_analytics/hieradata/dev/wso2/wso2am_analytics/pattern-1/default.yaml
@@ -28,7 +28,7 @@ wso2::key_store: wso2carbon.jks
 wso2::trust_store: client-truststore.jks
 
 wso2::file_list:
-#  - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
+  - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
   - "repository/resources/security/%{hiera('wso2::key_store')}"
   - "repository/resources/security/%{hiera('wso2::trust_store')}"
 wso2::datasources::mysql::connector_jar: mysql-connector-java-5.1.39-bin.jar
