--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-3/gateway-manager.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-3/gateway-manager.yaml
@@ -93,7 +93,7 @@ wso2::remove_file_list:
 wso2::enable_thrift_server: false
 wso2::thrift_server_host: localhost
 wso2::key_validator_client_type: WSClient
-wso2::enable_advance_throttling: true
+wso2::enable_advance_throttling: false
 wso2::enable_data_publisher: false
 wso2::enable_jms_connection_details: false
 wso2::disable_jms_event_parameters: true
