--- a/wso2is_prepacked/hieradata/dev/wso2/wso2is_prepacked/pattern-1/default.yaml
+++ b/wso2is_prepacked/hieradata/dev/wso2/wso2is_prepacked/pattern-1/default.yaml
@@ -51,7 +51,7 @@ wso2::key_store: wso2carbon.jks
 wso2::trust_store: client-truststore.jks
 
 wso2::file_list:
-#  - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
+  - "repository/components/lib/%{hiera('wso2::datasources::mysql::connector_jar')}"
   - "repository/resources/security/%{hiera('wso2::trust_store')}"
   - "repository/resources/security/%{hiera('wso2::key_store')}"
 
