--- a/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-5/gw-plus-km.yaml
+++ b/wso2am_runtime/hieradata/dev/wso2/wso2am_runtime/pattern-5/gw-plus-km.yaml
@@ -90,6 +90,22 @@ wso2::remove_file_list:
    -  "repository/deployment/server/webapps/api#am#publisher#v0.11.war"
    -  "repository/deployment/server/webapps/api#am#store#v0.11.war"
 
+wso2::master_datasources:
+    wso2_am_stats_db:
+      name: WSO2AM_STATS_DB
+      jndi_config: jdbc/WSO2AM_STATS_DB
+      description: The datasource used for setting statistics to API Manager
+      driver_class_name: "%{hiera('wso2::datasources::mysql::driver_class_name')}"
+      url: jdbc:mysql://192.168.57.210:3306/statdb?autoReconnect=true
+      username: "%{hiera('wso2::datasources::mysql::username')}"
+      password: "%{hiera('wso2::datasources::mysql::password')}"
+      max_active: "%{hiera('wso2::datasources::common::max_active')}"
+      max_wait: "%{hiera('wso2::datasources::common::max_wait')}"
+      test_on_borrow: "%{hiera('wso2::datasources::common::test_on_borrow')}"
+      default_auto_commit: "%{hiera('wso2::datasources::common::default_auto_commit')}"
+      validation_query: "%{hiera('wso2::datasources::mysql::validation_query')}"
+      validation_interval: "%{hiera('wso2::datasources::common::validation_interval')}"
+
 wso2::enable_advance_throttling: true
 wso2::enable_data_publisher: true
 wso2::enable_jms_connection_details: true
